.backup_gl_to_gov_20260209_214301/archives/old-outputs/workspace-output-1769587335-9370.txt
  File ".agent_hooks/run_all_hooks.py", line 1
    /**
    ^
SyntaxError: invalid syntax
